Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-68238

[REG 5.10] QSpinBox no longer gets a frame (SH_SpinBox_ButtonsInsideFrame check is wrong)

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P1: Critical P1: Critical
    • 5.11.1
    • 5.11.0 RC 1
    • Widgets: Styles
    • None
    • 9ffb00130624b90dabab9cf5dd6cb53999b32bdd

      Spin boxes no longer get a frame with common styles (Windows, Breeze, Skulpture), because the check if QStyle::SC_SpinBoxFrame needs to be included in option->subControls is wrong. The commit in qcommonstyle.cpp made 'true' the default value for SH_SpinBox_ButtonsInsideFrame, while the check in qabstractspinbox.cpp checks for a 'false' value to include the QStyle::SC_SpinBoxFrame.

      http://code.qt.io/cgit/qt/qtbase.git/commit/src/widgets/styles?id=80515c811a4c455d7f2fb9ded751b2406b08d045

      http://code.qt.io/cgit/qt/qtbase.git/commit/src/widgets/widgets/qabstractspinbox.cpp?id=80515c811a4c455d7f2fb9ded751b2406b08d045

        1. qtbug68238.jpg
          qtbug68238.jpg
          38 kB
        2. qtbug68238.zip
          2 kB
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            qt.team.quick.subscriptions Qt Quick and Widgets Team
            cfeck Christoph Feck
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes